surse/err115.txt
prob115.cpp: In member function ‘int C::get_z()’:
prob115.cpp:28:26: error: ‘int A::get_x()’ is inaccessible within this context
     int get_z() { return get_x() + get_y() + z; }
                          ^~~~~